--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,11 @@
 .mole {
     width: 100px;
+    visibility:hidden;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  width: 310px;
+ width: 80%;
 }
 
-.grid-container > div {
-    
-}
